# LLMFigJam

./: .example.env  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
core/: base_runner.py  converters.py  loaders.py  models.py  settings.py
runners/company_research/: models.py  prompts.py  runner.py
server/: main.py
tests/: conftest.py
tests/integration/: test_company_research_runner.py
