[project]
name = "llmfigjam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamodel-code-generator>=0.35.0",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-xai>=0.2.5",
    "nodriver>=0.47.0",
    "opencv-python>=4.12.0.88",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.1.0",
    "ruff>=0.14.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
]
